adding mysql jar to Spark query core-db
works if using this from host
```
sshuttle -l 0.0.0.0 --dns -r nick@o.scivulcan.com:5500 192.81.130.200/32
```
"java.lang.ClassNotFoundException: com.mysql.jdbc.Driver"

add mysql dependency to original semantive images

adding mysql jdbc connector to application itself (instead)

runs !

run on `http://ds-db3.scivulcan.com`
 Job 0 finished: foreach at SparkApplication.scala:69, took 275.692546 s

another run for the `#table_citation` : fails at the end
"Lost task 999.0 in stage 0.0 (TID 999, 172.17.0.4, executor 0): java.lang.OutOfMemoryError: GC overhead limit exceeded"

this version results in this error quite quickly: likely tried to bring large results in RAM
" Lost task 66.0 in stage 0.0 (TID 66, 172.17.0.4, executor 0): java.lang.OutOfMemoryError: GC overhead limit exceeded"

previous version ran successfully on `#table_citation`

attempts to fix the memory related errors at the end
https://www.slideshare.net/jcmia1/a-beginners-guide-on-troubleshooting-spark-applications